fix: remove calculated height from typical overlay scrollbar + remove the explicit height: 100%

--- a/frontend/src/components/TypicalOverlayScrollbar/typicalOverlayScrollbar.scss
+++ b/frontend/src/components/TypicalOverlayScrollbar/typicalOverlayScrollbar.scss
@@ -1,3 +1,3 @@
 .overlay-scrollbar {
-	height: calc(100% - 70px);
+	height: 100%;
 }
